Config option to support usqge of quoted identifiers